# en-one-for-all

./: Cargo.toml
src/: dict.rs  main.rs  parser.rs  util.rs
