[package]
name = "en-one-for-all"
version = "0.1.0"
authors = ["neverfelly <neverfelly@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
reqwest = "0.9.18"
percent-encoding = "1.0.1"
ansi_term = "0.11.0"
scraper = "0.10.0"
itertools = "0.8.0"
tempfile = "3.1.0"
cpal = "0.9.0"

[dependencies.clap]
version = "2.33"
default-features = false

[build-dependencies]
clap = "2.33"
